Added Dripstone replacement and improved ore replacement